--- a/estilo/style.css
+++ b/estilo/style.css
@@ -29,6 +29,23 @@ section#telefone{
     width: 311px;
     background: url(../imagens/frame-iphone.png) no-repeat;
 }
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 10px 10px 3px rgba(0, 0, 0, 0.438);
+    box-sizing: border-box;
+}
+section#redes-sociais{
+    text-align: right;
+}
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.432);
+    transform: translate(-3px, -3px);
+    box-shadow: 8px 8px 3px rgba(0, 0, 0, 0.322);
+    transition: transform 0.5s, border 1s;
+}
+
 iframe#tela{
     position: absolute;
     top: 80px;
